--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+Django = "==3.2.18"
+selenium = "==4.0.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.7"
